# Flat-Space

./: .gitignore  Cargo.toml  README.md
Backend-data/Ship-Parts/: Armour-Plate.java  General-Armour.java  Planar-Drive.java
Backend-data/mechanics/: Location.java
Backend-data/planarSpace/: PlanarLocation.java
Backend-data/shipParts/: ArmourPlate.java  Engine.java  OuterArmour.java  Part.java  PlanarDrive.java
Backend-data/stellarBodies/: Asteroid.java  Body.java  PlanarEntrance.java  Planetoid.java  Star.java  System.java  SystemLocation.java
Controller/: FlatController.java  GameController.java  InvalidInputException.java  SpatialController.java  StartMenuController.java  TimeController.java
Controller/TO/: Coordinates.java  TOBody.java  TOFlatPortal.java  TOGame.java  TOGameSettings.java  TONationSettings.java  TOProfile.java  TOSystem.java
application/: FlatSpaceApplication.java
backendData/Ships/: Fleet.java  Ship.java  ShipyardFleet.java  SpecificPart.java
backendData/game/: FlatSpace.java  FlatSpaceGame.java  GameSettings.java  NameLists.java  OutOfNamesException.java  Profile.java  ProfileSettings.java  SystemBuilder.java  SystemFactory.java
backendData/installations/: CommercialShipyard.java  NavalShipyard.java  Shipyard.java  TypicalInstallation.java
backendData/mechanics/: Task.java  (+15 more)
src/: lib.rs  main.rs  model.rs  services.rs  view.rs
temporaryFrontend/: FlatMap.java  FlatView.java  GameMenuView.java  GameSettingsView.java  LoginDialog.java  StartMenu.java  SystemMap.java  SystemView.java  TimeControlPanel.java  UserSettingsView.java
(+108 files in other folders)
